# zMindDumpZeu

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_test_data.js  test_zpulse_event.py
.github/workflows/: schema-governance.yml
.jules/: bolt.md
api/: app.py
app/: actions.ts  globals.css  layout.tsx  page.test.ts  page.tsx
app/components/: SubscribeButton.tsx
backend/: main.py
contracts/: HorizonToken.sol  TeeBoxNFT.sol
docs/: dashboard.html
examples/: example_usage.py
functions/: .eslintrc.js  index.js  package-lock.json  package.json
marketing/: DECK.md  INVESTOR_DECK.md  MARIA_SCRIPT.md  RAISE_EMAILS.md  REALTOR_SCRIPT.md  SOCIAL_POSTS.md
openapi/: user.json
schemas/: builder_profile.json  chief_aim.json  desirez_entry.json  envelope.json  failure_taxonomy_record.json  faithz_entry.json  mastermind_session.json  project_artifact.json  recovery_protocol.json  request.json  task.json  user.json
src/: decision_detector.py  di_engine.py  dispersion_model.py  envelopes.py  eventbus.py  handlers.py  league_engine.py  rivalry_engine.py  rivalry_schema.sql  run_di_hole14.py  run_di_validation.py  run_rivalry_demo.py  scheduling_engine.py  test_apex_scheduler.py  test_competitive_os_hardened.py  test_di_engine.py  test_eventbus.py  test_league_engine.py  test_rivalry_engine.py  test_rivalry_hardened.py  test_write_to_sheet.py  test_zpulse_event.py  test_zpulse_fallback.py  testzpulseevent.py  zpulse.py
src/jules/: auth.py  (+6 more)
(+19 files in other folders)
